--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
